# datacave

./: .gitignore  CODE_OF_CONDUCT.md  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  benchmarks.md  config.example.toml  roadmap-progress.md
.github/workflows/: ci.yml
crates/datacave-core/: Cargo.toml
crates/datacave-core/src/: catalog.rs  error.rs  lib.rs  mvcc.rs  types.rs
crates/datacave-lsm/: Cargo.toml
crates/datacave-lsm/benches/: lsm_bench.rs
crates/datacave-lsm/src/: compaction.rs  encryption.rs  engine.rs  lib.rs  memtable.rs  sstable.rs  tests.rs  wal.rs
crates/datacave-protocol/: Cargo.toml
crates/datacave-protocol/src/: backend.rs  frontend.rs  lib.rs  messages.rs  tests.rs
crates/datacave-server/: Cargo.toml
crates/datacave-server/src/: auth.rs  config.rs  coordinator.rs  failover.rs  main.rs  raft.rs  server.rs
crates/datacave-sql/: Cargo.toml
crates/datacave-sql/benches/: sql_bench.rs
crates/datacave-sql/src/: catalog.rs  executor.rs  lib.rs  parser.rs  planner.rs  tests.rs  vectorized.rs
