[package]
name = "datacave-lsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
datacave-core = { path = "../datacave-core" }
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tracing = "0.1"
aes-gcm = "0.10"
rand = "0.8"
metrics = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
