[package]
name = "datacave-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
tokio = { version = "1", features = ["io-util", "net"] }
datacave-core = { path = "../datacave-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
