[package]
name = "datacave-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tokio-rustls = "0.26"
rustls = "0.22"
rustls-pemfile = "2"
base64 = "0.22"
argon2 = "0.5"
password-hash = "0.5"
datacave-core = { path = "../datacave-core" }
datacave-lsm = { path = "../datacave-lsm" }
datacave-sql = { path = "../datacave-sql" }
datacave-protocol = { path = "../datacave-protocol" }
