[package]
name = "datacave-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
datacave-core = { path = "../datacave-core" }
datacave-lsm = { path = "../datacave-lsm" }
sqlparser = "0.45"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
bincode = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
